--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1228,12 +1228,6 @@ fieldset {
     display: inline-block;
 
 }
-
-.leagues-pages {
-    height: 350px;
-    background-color: gray;
-}
-
 .inline-list h3 a,
 .inline-list h3 {
     color: #fff;
@@ -2703,14 +2697,29 @@ td.player-name p {
 }
 
 .leagues-pages {
-    height: 300px;
+    height: 400px;
     background-image: url("../images/leagues-banner-image.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     background-color: rgba(0 0 0/20%);
+    display: flex;
+    align-items: center;
+    z-index: 1;
+    position: relative;
 }
-
+.leagues-pages::after {
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    background-color: rgb(0 0 0 / 60%);
+    height: 100%;
+    width: 100%;
+}
+.banner-content {
+    margin-top: 50px;
+}
 .about-banner {
     background-image: url("../images/about-banner-image.jpg");
 }
